--- a/susana/gallery.html
+++ b/susana/gallery.html
@@ -70,10 +70,14 @@
 <li><a href="gallery.html?slide=21">Sorrow Tree</a></li>
 <li><a href="gallery.html?slide=22">The Forge</a></li>
 <li><a href="gallery.html?slide=23">Oceanic Creation</a></li>
-<li><a href="gallery.html?slide=24">Strong Horse</a></li>
-<li><a href="gallery.html?slide=25">Strong Horse</a></li>
-<li><a href="gallery.html?slide=26">Strong Horse</a></li>
-<li><a href="gallery.html?slide=27">Cute Owl</a></li>
+<li><a href="gallery.html?slide=24">Pod 1</a></li>
+<li><a href="gallery.html?slide=25">Pod 2</a></li>
+<li><a href="gallery.html?slide=26">Pod 3</a></li>
+<li><a href="gallery.html?slide=27">Pod 4</a></li>
+<li><a href="gallery.html?slide=28">Strong Horse</a></li>
+<li><a href="gallery.html?slide=29">Strong Horse</a></li>
+<li><a href="gallery.html?slide=30">Strong Horse</a></li>
+<li><a href="gallery.html?slide=31">Cute Owl</a></li>
           </ul>
         </div>
       </div>
@@ -604,6 +608,86 @@
             <div class="fill" style=" background-color:#48c3af;">
               <div class="inner-content">
                 <div class="carousel-img">
+                <a href="static/img/Pod1_hd.jpg">
+                <picture>
+                  <source srcset="static/img/Pod1_hd.jpg" media="(min-width: 1400px)">
+                  <source srcset="static/img/Pod1_medium.jpg" media="(min-width: 768px)">
+                  <source srcset="static/img/Pod1_small.jpg" media="(min-width: 576px)">
+                  <img srcset="static/img/Pod1_small.jpg" alt="responsive image" class="img img-responsive">
+                </picture>
+                </a>
+                </div>
+                <div class="carousel-desc">
+                  <h3>Pod One</h3>
+                  <p>Acrylic on Canvas, 16x20, 2018</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="item item25">
+            <div class="fill" style=" background-color:#48c3af;">
+              <div class="inner-content">
+                <div class="carousel-img">
+                <a href="static/img/Pod2_hd.jpg">
+                <picture>
+                  <source srcset="static/img/Pod2_hd.jpg" media="(min-width: 1400px)">
+                  <source srcset="static/img/Pod2_medium.jpg" media="(min-width: 768px)">
+                  <source srcset="static/img/Pod2_small.jpg" media="(min-width: 576px)">
+                  <img srcset="static/img/Pod2_small.jpg" alt="responsive image" class="img img-responsive">
+                </picture>
+                </a>
+                </div>
+                <div class="carousel-desc">
+                  <h3>Pod Two</h3>
+                  <p>Acrylic on Canvas, 16x20, 2018</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="item item26">
+            <div class="fill" style=" background-color:#48c3af;">
+              <div class="inner-content">
+                <div class="carousel-img">
+                <a href="static/img/Pod3_hd.jpg">
+                <picture>
+                  <source srcset="static/img/Pod3_hd.jpg" media="(min-width: 1400px)">
+                  <source srcset="static/img/Pod3_medium.jpg" media="(min-width: 768px)">
+                  <source srcset="static/img/Pod3_small.jpg" media="(min-width: 576px)">
+                  <img srcset="static/img/Pod3_small.jpg" alt="responsive image" class="img img-responsive">
+                </picture>
+                </a>
+                </div>
+                <div class="carousel-desc">
+                  <h3>Pod Three</h3>
+                  <p>Acrylic on Canvas, 16x20, 2018</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="item item27">
+            <div class="fill" style=" background-color:#48c3af;">
+              <div class="inner-content">
+                <div class="carousel-img">
+                <a href="static/img/Pod4_hd.jpg">
+                <picture>
+                  <source srcset="static/img/Pod4_hd.jpg" media="(min-width: 1400px)">
+                  <source srcset="static/img/Pod4_medium.jpg" media="(min-width: 768px)">
+                  <source srcset="static/img/Pod4_small.jpg" media="(min-width: 576px)">
+                  <img srcset="static/img/Pod4_small.jpg" alt="responsive image" class="img img-responsive">
+                </picture>
+                </a>
+                </div>
+                <div class="carousel-desc">
+                  <h3>Pod Four</h3>
+                  <p>Acrylic on Canvas, 16x20, 2018</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="item item28">
+            <div class="fill" style=" background-color:#48c3af;">
+              <div class="inner-content">
+                <div class="carousel-img">
                 <a href="static/img/StrongHorseSide_hd.jpg">
                 <picture>
                   <source srcset="static/img/StrongHorseSide_hd.jpg" media="(min-width: 1400px)">
@@ -620,7 +704,7 @@
               </div>
             </div>
           </div>
-          <div class="item item25">
+          <div class="item item29">
             <div class="fill" style=" background-color:#48c3af;">
               <div class="inner-content">
                 <div class="carousel-img">
@@ -640,7 +724,7 @@
               </div>
             </div>
           </div>
-          <div class="item item26">
+          <div class="item item30">
             <div class="fill" style=" background-color:#48c3af;">
               <div class="inner-content">
                 <div class="carousel-img">
@@ -660,7 +744,7 @@
               </div>
             </div>
           </div>
-          <div class="item item27">
+          <div class="item item31">
             <div class="fill" style=" background-color:#48c3af;">
               <div class="inner-content">
                 <div class="carousel-img">
