--- a/susana/index.html
+++ b/susana/index.html
@@ -39,7 +39,7 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" onclick="closeSearch()">&times;</button>
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
         <h4 class="modal-title">Search</h4>
       </div>
       <div class="modal-body">
@@ -70,10 +70,14 @@
 <li><a href="gallery.html?slide=21">Sorrow Tree</a></li>
 <li><a href="gallery.html?slide=22">The Forge</a></li>
 <li><a href="gallery.html?slide=23">Oceanic Creation</a></li>
-<li><a href="gallery.html?slide=24">Strong Horse</a></li>
-<li><a href="gallery.html?slide=25">Strong Horse</a></li>
-<li><a href="gallery.html?slide=26">Strong Horse</a></li>
-<li><a href="gallery.html?slide=27">Cute Owl</a></li>
+<li><a href="gallery.html?slide=24">Pod 1</a></li>
+<li><a href="gallery.html?slide=25">Pod 2</a></li>
+<li><a href="gallery.html?slide=26">Pod 3</a></li>
+<li><a href="gallery.html?slide=27">Pod 4</a></li>
+<li><a href="gallery.html?slide=28">Strong Horse</a></li>
+<li><a href="gallery.html?slide=29">Strong Horse</a></li>
+<li><a href="gallery.html?slide=30">Strong Horse</a></li>
+<li><a href="gallery.html?slide=31">Cute Owl</a></li>
           </ul>
         </div>
       </div>
@@ -114,13 +118,9 @@
 
 <!-- Modal Image -->
 <div id="imgModal" class="modal">
-  <div class="modal-dialog">
-    <div class="modal-body">
-      <span class="modal-close" onclick="closeGalleryImage()">&times;</span>
-      <img class="modal-content" id="modal-content">
-      <div id="modal-caption" class="modal-caption"></div>
-    </div>
-  </div>
+  <span class="modal-close" onclick="closeGalleryImage()">&times;</span>
+  <img class="modal-content" id="modal-content">
+  <div id="modal-caption" class="modal-caption"></div>
 </div>
   <div class="container">
     <h1>Susan Frost's Gallery</h1>
@@ -152,10 +152,14 @@
       <img src="static/img/Abstract2_small.jpg" alt="Sorrow Tree" onclick="openGalleryImage(21)" class="hover-shadow">
       <img src="static/img/Abstract3_small.jpg" alt="The Forge" onclick="openGalleryImage(22)" class="hover-shadow">
       <img src="static/img/Abstract4_small.jpg" alt="Oceanic Creation" onclick="openGalleryImage(23)" class="hover-shadow">
-      <img src="static/img/StrongHorseSide_small.jpg" alt="Strong Horse" onclick="openGalleryImage(24)" class="hover-shadow">
-      <img src="static/img/StrongHorseFront_small.jpg" alt="Strong Horse" onclick="openGalleryImage(25)" class="hover-shadow">
-      <img src="static/img/StrongHorseRear_small.jpg" alt="Strong Horse" onclick="openGalleryImage(26)" class="hover-shadow">
-      <img src="static/img/ClayOwl_small.jpg" alt="Cute Owl" onclick="openGalleryImage(27)" class="hover-shadow">
+      <img src="static/img/Pod1_small.jpg" alt="Pod One" onclick="openGalleryImage(24)" class="hover-shadow">
+      <img src="static/img/Pod2_small.jpg" alt="Pod Two" onclick="openGalleryImage(25)" class="hover-shadow">
+      <img src="static/img/Pod3_small.jpg" alt="Pod Three" onclick="openGalleryImage(26)" class="hover-shadow">
+      <img src="static/img/Pod4_small.jpg" alt="Pod Four" onclick="openGalleryImage(27)" class="hover-shadow">
+      <img src="static/img/StrongHorseSide_small.jpg" alt="Strong Horse" onclick="openGalleryImage(28)" class="hover-shadow">
+      <img src="static/img/StrongHorseFront_small.jpg" alt="Strong Horse" onclick="openGalleryImage(29)" class="hover-shadow">
+      <img src="static/img/StrongHorseRear_small.jpg" alt="Strong Horse" onclick="openGalleryImage(30)" class="hover-shadow">
+      <img src="static/img/ClayOwl_small.jpg" alt="Cute Owl" onclick="openGalleryImage(31)" class="hover-shadow">
     </div>
     </div>
     </div>
