--- a/susana/paintings.html
+++ b/susana/paintings.html
@@ -70,10 +70,14 @@
 <li><a href="gallery.html?slide=21">Sorrow Tree</a></li>
 <li><a href="gallery.html?slide=22">The Forge</a></li>
 <li><a href="gallery.html?slide=23">Oceanic Creation</a></li>
-<li><a href="gallery.html?slide=24">Strong Horse</a></li>
-<li><a href="gallery.html?slide=25">Strong Horse</a></li>
-<li><a href="gallery.html?slide=26">Strong Horse</a></li>
-<li><a href="gallery.html?slide=27">Cute Owl</a></li>
+<li><a href="gallery.html?slide=24">Pod 1</a></li>
+<li><a href="gallery.html?slide=25">Pod 2</a></li>
+<li><a href="gallery.html?slide=26">Pod 3</a></li>
+<li><a href="gallery.html?slide=27">Pod 4</a></li>
+<li><a href="gallery.html?slide=28">Strong Horse</a></li>
+<li><a href="gallery.html?slide=29">Strong Horse</a></li>
+<li><a href="gallery.html?slide=30">Strong Horse</a></li>
+<li><a href="gallery.html?slide=31">Cute Owl</a></li>
           </ul>
         </div>
       </div>
