--- a/susana/drawings.html
+++ b/susana/drawings.html
@@ -70,10 +70,14 @@
 <li><a href="gallery.html?slide=21">Sorrow Tree</a></li>
 <li><a href="gallery.html?slide=22">The Forge</a></li>
 <li><a href="gallery.html?slide=23">Oceanic Creation</a></li>
-<li><a href="gallery.html?slide=24">Strong Horse</a></li>
-<li><a href="gallery.html?slide=25">Strong Horse</a></li>
-<li><a href="gallery.html?slide=26">Strong Horse</a></li>
-<li><a href="gallery.html?slide=27">Cute Owl</a></li>
+<li><a href="gallery.html?slide=24">Pod 1</a></li>
+<li><a href="gallery.html?slide=25">Pod 2</a></li>
+<li><a href="gallery.html?slide=26">Pod 3</a></li>
+<li><a href="gallery.html?slide=27">Pod 4</a></li>
+<li><a href="gallery.html?slide=28">Strong Horse</a></li>
+<li><a href="gallery.html?slide=29">Strong Horse</a></li>
+<li><a href="gallery.html?slide=30">Strong Horse</a></li>
+<li><a href="gallery.html?slide=31">Cute Owl</a></li>
           </ul>
         </div>
       </div>
@@ -224,7 +228,7 @@
     <div class="container">
       <div class="row">
       <div class="col-sm-7">
-        <div class="f-b">&copy; 2012-2018 Susan A. Frost. All Rights Reserved.</div>
+        <div class="f-b">&copy; 2012-2019 Susan A. Frost. All Rights Reserved.</div>
       </div>
       <div class="col-sm-5">
         <div class="footer-widget-social">
