Add buy dropdown

--- a/queensofgoodness/index.html
+++ b/queensofgoodness/index.html
@@ -38,8 +38,10 @@
 
 <div class="container-fluid" id="top">
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="index.html"/><i class="fa fa-coffee"></i></a>
+<nav class="navbar navbar-expand-sm navbar-light" style="background-color: #f8cc46;">
+  <a class="navbar-brand" href="#">
+    <img src="static/img/crown.jpg" width="48" height="48" alt="">
+  </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -63,7 +65,7 @@
           </div>
       </li>
       <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="connectDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <a class="nav-link dropdown-toggle" href="#" id="newsDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
       News
         </a>
         <div class="dropdown-menu" aria-labelledby="newsDropdown">
@@ -72,25 +74,25 @@
           <a class="dropdown-item" href="https://rivertonranger.com/lander_journal/lifestyle/from-nasa-to-the-cream-of-the-crop/article_e2f46d36-59c1-11ef-ad9f-6b6dab9493b6.html">Creamed Honey</a>
         </div>
       </li>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="buyDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+      Buy
+        <div class="dropdown-menu" aria-labelledby="buyDropdown">
+          <a class="dropdown-item" href="https://meadowlarklander.org/">Meadowlark</a>
+          <a class="dropdown-item" href="https://www.facebook.com/p/Fremont-Local-Market-100084811015487/">Fremont Local</a>
+          <a class="dropdown-item" href="https://www.facebook.com/everything4yourhome/">Hello The House</a>
+          <a class="dropdown-item" href="https://eatwyoming.com/">Eat Wyoming</a>
+        </div>
+      </li>
     </ul>
   </div>
 </nav>
-
-  <hr/>
+</div>
 
   <div class="row">
-    <div class="col-sm-8">
-      <div class="page-header">
-        <h3>Queens of Goodness </h3>
-      </div>
-    </div>
-    <div class="col-sm-8">
-      <p>Queens of Goodness uses locally sourced raw honey specially blended with beneficial spices to make easy to use creamed honey products for creating golden milk, golden lattes and other tasty concoctions.</p>
-    </div>
-    </div>
-<img src="static/img/GoldenMilk_hd.jpg" alt="Bee Hives" srcset="static/img/GoldenMilk_hd.jpg 1400w,static/img/GoldenMilk_medium.jpg 768w,static/img/GoldenMilk_small.jpg 576w" sizes="(max-width: 576px) 500px, (max-width: 768px) 650px, 1400px">
-  <hr/>
+<img src="static/img/1_hd.jpg" alt="Bee Hives" srcset="static/img/1_hd.jpg 1400w,static/img/1_medium.jpg 768w,static/img/1_small.jpg 576w" sizes="(max-width: 576px) 500px, (max-width: 768px) 650px, (max-width: 1000px) 900px">
   </div><!--/row-->
+  <hr/>
 </div><!--/.container-->
 
 
