--- a/queensofgoodness/error403.html
+++ b/queensofgoodness/error403.html
@@ -1,13 +1,25 @@
 <!DOCTYPE html>
 <html lang=en>
-  <meta charset=utf-8>
-  <meta name=viewport content="initial-scale=1, minimum-scale=1, width=device-width">
-  <title>Error 403 (Forbidden)</title>
-  <style>
-    *{margin:0;padding:0}html,code{font:15px/22px arial,sans-serif}html{background:#fff;color:#222;padding:15px}body{margin:7% auto 0;max-width:390px;min-height:180px;padding:30px 0 15px}* > body{100% 5px no-repeat;padding-right:205px}p{margin:11px 0 22px;overflow:hidden}a img{border:0}@media screen and (max-width:772px){body{background:none;margin-top:0;max-width:none;padding-right:0}}@media only screen and (min-resolution:192dpi)@media only screen and (-webkit-min-device-pixel-ratio:2)
-  </style>
-  <h3>Queens of Goodness</h3>
-  <a href="https://queensofgoodness.com/index.html">
-    <img src="https://queensofgoodness.com/static/img/bee.jpg" alt="Home" />
-  </a>
-  <p>The requested URL is not available (<b>403</b>).
+  <head>
+    <meta charset=utf-8>
+    <meta name=viewport content="initial-scale=1, minimum-scale=1, width=device-width">
+    <title>Error 403 (Forbidden)</title>
+    <link href="static/css/custom.css" rel="stylesheet" media="screen">
+  </head>
+  <body>
+    <div class="container-xl" id="hero">
+      <div class="row g-3">
+        <a href="https://queensofgoodness.com/index.html">
+          <div class="image-container">
+            <img src="static/img/Purple%20flower%20bee.jpg" class="img-fluid img-center" width=500px>
+            <div class="overlay-text-ul">
+              <h1>403</h1>
+              <h2>The requested URL is not available</h2>
+              <h4 class="text-center">Go Back to the Hive</h4>
+            </div>
+          </div>
+        </a>
+      </div>
+    </div>
+  </body>
+</html>
