Update menus, add shop page, Brad's feedback

--- a/queensofgoodness/bees.html
+++ b/queensofgoodness/bees.html
@@ -14,19 +14,19 @@
 
     <!-- meta -->
     <meta property="og:locale" content="en_US">
-    <meta property="og:title" content="Queens of Goodness - Education & Outreach">
+    <meta property="og:title" content="Queens of Goodness - Education & Events">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://queensofgoodness.com/index.html">
-    <meta property="og:site_name" content="Queens of Goodness - Education & Outreach">
+    <meta property="og:site_name" content="Queens of Goodness - Education & Events">
     <meta property="og:description" content="Premium creamed raw honey with fair trade spices and whole freeze dried fruits">
     <meta property="og:image" content="static/img/logo.svg">
 
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:title" content="Queens of Goodness - Education & Outreach">
+    <meta property="twitter:title" content="Queens of Goodness - Education & Events">
     <meta property="twitter:description" content="Premium creamed raw honey with fair trade spices and whole freeze dried fruits">
     <meta property="twitter:site" content="@queensofgoodness">
     <meta property="twitter:image" content="static/img/logo.svg">
-    <meta name="description" content="Queens of Goodness - Education & Outreach">
+    <meta name="description" content="Queens of Goodness - Education & Events">
     <meta name="author" content="Susan Frost">
     <meta name="robots" content="index, follow">
     <meta name="googlebot" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
@@ -65,32 +65,16 @@
         <div class="offcanvas-body">
           <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
             <li class="nav-item d-none d-lg-block">
-              <a class="nav-link" href="about.html">About</a>
-            </li>
-            <li class="nav-item d-none d-lg-block">
               <a class="nav-link" href="products.html">Products</a>
             </li>
             <li class="nav-item d-none d-lg-block">
-              <a class="nav-link" href="bees.html">Bees</a>
+              <a class="nav-link" href="bees.html">Education</a>
             </li>
             <li class="nav-item d-none d-lg-block">
-              <a class="nav-link" href="honey.html">Honey</a>
+              <a class="nav-link" href="shop.html">Shop Local</a>
             </li>
-            <li class="nav-item dropdown d-none d-lg-block">
-              <a class="nav-link dropdown-toggle" href="products.html#ShopLocal" id="buyDropdown" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Shop Local
-              </a>
-              <div class="dropdown-menu" aria-labelledby="buyDropdown">
-                <a class="dropdown-item" href="https://eatwyoming.com/">Eat Wyoming</a>
-                <a class="dropdown-item" href="https://meadowlarklander.org/">Meadowlark Market</a>
-                <a class="dropdown-item" href="https://www.facebook.com/p/Fremont-Local-Market-100084811015487/">Fremont Local Market</a>
-              </div>
-            </li>
-            <li class="nav-item d-lg-none">
-              <a class="nav-link" href="about.html">
-                <img src="static/img/SinksSmoker.jpg" class="img-fluid cropped-ofc">
-                <p class="text-center">About Our Company</p>
-              </a>
+            <li class="nav-item d-none d-lg-block">
+              <a class="nav-link" href="about.html">About</a>
             </li>
             <li class="nav-item d-lg-none">
               <a class="nav-link" href="products.html">
@@ -101,13 +85,13 @@
             <li class="nav-item d-lg-none">
               <a class="nav-link" href="bees.html">
                 <img src="static/img/Bee%20on%20Dandilion.png" class="img-fluid cropped-ofc">
-                <p class="text-center">Education & Outreach</p>
+                <p class="text-center">Education & Events</p>
               </a>
             </li>
             <li class="nav-item d-lg-none">
-              <a class="nav-link" href="honey.html">
-                <img src="static/img/Jars%20of%20Honey.jpg" class="img-fluid cropped-ofc">
-                <p class="text-center">Know Your Honey</p>
+              <a class="nav-link" href="about.html">
+                <img src="static/img/SinksSmoker.jpg" class="img-fluid cropped-ofc">
+                <p class="text-center">About Our Company</p>
               </a>
             </li>
           </ul>
@@ -119,36 +103,38 @@
   <body>
     <div class="container-xl" id="hero">
 
-      <div class="row g-3">
-        <div class="col-sm-6">
-          <div class="card">
+      <div class="row row-cols-1 row-cols-md-2 g-3">
+        <div class="col">
+          <div class="card h-100">
             <div class="card-header text-center">Education & Events</div>
+            <img class="card-img-top" src="static/img/HoneyBeeDay24.jpeg" alt="Honey Bee Day 24">
             <div class="card-body">
-              <img class="card-img-top" src="static/img/HoneyBeeDay24.jpeg" alt="Honey Bee Day 24">
+              <h5 class="card-title text-center">Beekeeping Classes & Events</h5>
               <ul class="card-text">
-                <li>Beekeeping classes - introduction and intermediate</li>
-                <li>Outreach with local schools - demonstration hive</li>
-                <li>Events like National Honey Bee Day, Ag and Garden Expos</li>
+                <li>Introductory and intermediate</li>
+                <li>School Programs - demonstration hive</li>
+                <li>National Honey Bee Day, Ag and Garden Expos</li>
               </ul>
+              <a class="learn-more" href="honey.html">Learn More</a>
             </div>
           </div>
         </div>
-        <div class="col-sm-6">
-          <div class="card">
+        <div class="col">
+          <div class="card h-100">
             <div class="card-header text-center">Know Your Honey</div>
+            <img class="card-img-top" src="static/img/Jars%20of%20Honey.jpg">
             <div class="card-body">
-              <a href="honey.html">
-                <img class="card-img-top" src="static/img/Jars%20of%20Honey.jpg">
-              </a>
+              <h5 class="card-title text-center">Honey is More Than Delicious</h5>
               <p class="card-text">
-                Local honey - raw honey - processed honey - organic honey - imported honey - monofloral honey - crystallized honey - creamed honey</p>
+                Honey - local honey - raw honey - pure honey - organic honey - imported honey - monofloral honey - crystallized honey - creamed honey</p>
+              <a class="learn-more" href="honey.html">Learn More</a>
             </div>
           </div>
         </div>
       </div>
-      <div class="row g-3">
-        <div class="col-sm-6">
-          <div class="card" style="background-color: #ffda52;">
+      <div class="row row-cols-1 row-cols-md-2 g-3">
+        <div class="col">
+          <div class="card h-100" style="background-color: #ffda52;">
             <div class="card-header text-center">Bee or Wasp?</div>
             <img class="card-img-top" src="static/img/Yellow_Jacket_photo_by_William_Ray_Martin.jpg" alt="Card image">
             <div class="card-body">
@@ -181,8 +167,8 @@
             </div>
           </div>
         </div>
-        <div class="col-sm-6">
-          <div class="card" style="background-color: #e6a322;">
+        <div class="col">
+          <div class="card h-100" style="background-color: #e6a322;">
             <div class="card-header text-center">Honey Bees</div>
             <img class="card-img-top" src="static/img/Apis_mellifera_su_foglia_di_alloro.jpg" alt="Card image">
             <div class="card-body">
@@ -216,11 +202,19 @@
 
     <footer>
       <div class="container text-primary">
-        <div class="row g-3 d-flex align-items-top">
+        <div class="row row-cols-1 row-cols-md-2 g-3">
           <div class="col">
-            <h5 class="mb-4"><img src="static/img/LogoWordmark.svg" height="32" alt=""></h5>
-            <p>We believe in the power of nature’s gifts<br>
-              -- raw and unfiltered local honey --<br>
+            <h5 class="mb-4">Quick Links</h5>
+            <ul class="list-unstyled">
+              <li class="mb-2"><a href="products.html" class="footer-link"><p>Our Products</p></a></li>
+              <li class="mb-2"><a href="bees.html" class="footer-link"><p>Education & Events</p></a></li>
+              <li class="mb-2"><a href="shop.html" class="footer-link"><p>Shop Local</p></a></li>
+              <li class="mb-2"><a href="about.html" class="footer-link"><p>About Our Company</p></a></li>
+            </ul>
+          </div>
+          <div class="col">
+            <h5 class="mb-4"><img src="static/img/LogoWordmark.svg" height="48" alt=""></h5>
+            <p>Raw Local Honey & Premium Ingredients<br>
               -- nutritious freeze-dried whole fruits --<br>
               -- fair-trade and single origin spices --</p>
             <div class="social-links">
@@ -230,15 +224,6 @@
             </div>
           </div>
 
-          <div class="col">
-            <h5 class="mb-4">Quick Links</h5>
-            <ul class="list-unstyled">
-              <li class="mb-2"><a href="about.html" class="footer-link"><p>About Our Company</p></a></li>
-              <li class="mb-2"><a href="products.html" class="footer-link"><p>Our Products</p></a></li>
-              <li class="mb-2"><a href="bees.html" class="footer-link"><p>Education & Outreach</p></a></li>
-              <li class="mb-2"><a href="honey.html" class="footer-link"><p>Know Your Honey</p></a></li>
-            </ul>
-          </div>
         </div>
 
         <!-- Copyright -->
