--- a/queensofgoodness/index.html
+++ b/queensofgoodness/index.html
@@ -46,7 +46,7 @@
   </head>
 
 
-  <nav class="navbar navbar-expand-lg border-bottom fixed-top">
+  <nav class="navbar navbar-light navbar-expand-lg border-bottom fixed-top">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">
       </a>
@@ -65,32 +65,16 @@
         <div class="offcanvas-body">
           <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
             <li class="nav-item d-none d-lg-block">
-              <a class="nav-link" href="about.html">About</a>
-            </li>
-            <li class="nav-item d-none d-lg-block">
               <a class="nav-link" href="products.html">Products</a>
             </li>
             <li class="nav-item d-none d-lg-block">
               <a class="nav-link" href="bees.html">Education</a>
             </li>
             <li class="nav-item d-none d-lg-block">
-              <a class="nav-link" href="honey.html">Honey</a>
+              <a class="nav-link" href="shop.html">Shop Local</a>
             </li>
-            <li class="nav-item dropdown d-none d-lg-block">
-              <a class="nav-link dropdown-toggle" href="products.html#ShopLocal" id="buyDropdown" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Shop Local
-              </a>
-              <div class="dropdown-menu" aria-labelledby="buyDropdown">
-                <a class="dropdown-item" href="https://eatwyoming.com/">Eat Wyoming</a>
-                <a class="dropdown-item" href="https://meadowlarklander.org/">Meadowlark Market</a>
-                <a class="dropdown-item" href="https://www.facebook.com/p/Fremont-Local-Market-100084811015487/">Fremont Local Market</a>
-              </div>
-            </li>
-            <li class="nav-item d-lg-none">
-              <a class="nav-link" href="about.html">
-                <img src="static/img/SinksSmoker.jpg" class="img-fluid cropped-ofc">
-                <p class="text-center">About Our Company</p>
-              </a>
+            <li class="nav-item d-none d-lg-block">
+              <a class="nav-link" href="about.html">About</a>
             </li>
             <li class="nav-item d-lg-none">
               <a class="nav-link" href="products.html">
@@ -101,13 +85,13 @@
             <li class="nav-item d-lg-none">
               <a class="nav-link" href="bees.html">
                 <img src="static/img/Bee%20on%20Dandilion.png" class="img-fluid cropped-ofc">
-                <p class="text-center">Education & Outreach</p>
+                <p class="text-center">Education & Events</p>
               </a>
             </li>
             <li class="nav-item d-lg-none">
-              <a class="nav-link" href="honey.html">
-                <img src="static/img/Jars%20of%20Honey.jpg" class="img-fluid cropped-ofc">
-                <p class="text-center">Know Your Honey</p>
+              <a class="nav-link" href="about.html">
+                <img src="static/img/SinksSmoker.jpg" class="img-fluid cropped-ofc">
+                <p class="text-center">About Our Company</p>
               </a>
             </li>
           </ul>
@@ -135,7 +119,7 @@
         </div>
       </div>
       <div class="row">
-        <h4 class="bolder text-center">Discover Our Premium Creamed Raw Honey</h4>
+        <h2 class="bolder text-center">Discover Our Premium Creamed Raw Honey</h2>
       </div>
       <div class="row g-3">
         <div class="image-container">
@@ -146,7 +130,7 @@
       </div>
 
       <div class="row">
-        <h4 class="bolder text-center">Hand-crafted to Nourish Body & Spirit</h4>
+        <h2 class="bolder text-center">Hand-crafted to Nourish Body & Spirit</h2>
       </div>
 
       <div class="row row-cols-2 g-3">
@@ -159,9 +143,9 @@
       </div>
 
       <div class="row">
-        <h4 class="bolder text-center">Raw Local Honey & Premium Ingredients<br>
+        <h2 class="bolder text-center">Raw Local Honey & Premium Ingredients<br>
           -- nutritious freeze-dried whole fruits --<br>
-          -- fair-trade & single origin spices --</h4>
+          -- fair-trade & single origin spices --</h2>
       </div>
 
       <div class="row row-cols-2 row-cols-lg-3 row-cols-xl-6 g-3">
@@ -186,7 +170,7 @@
       </div>
 
       <div class="row">
-        <h4 class="bolder text-center">Supporting Local Beekeepers & Small Farmers</h4>
+        <h2 class="bolder text-center">Supporting Local Beekeepers & Small Farmers</h2>
       </div>
 
       <div class="row row-cols-2 g-3">
@@ -199,7 +183,7 @@
       </div>
 
       <div class="row">
-        <h4 class="bolder text-center">Indulge in Nature's Finest Blends</h4>
+        <h2 class="bolder text-center">Indulge in Nature's Finest Blends</h2>
       </div>
 
 
@@ -257,7 +241,7 @@
       <div class="row row-cols-2 g-3">
         <div class="col">
           <div class="card">
-            <div class="card-header text-center">Education & Outreach</div>
+            <div class="card-header text-center">Education & Events</div>
             <div class="card-body">
               <a href="bees.html">
                 <img src="static/img/HoneyBeeDay24.jpeg" class="img-fluid">
@@ -280,11 +264,19 @@
 
     <footer>
       <div class="container text-primary">
-        <div class="row g-3 d-flex align-items-top">
+        <div class="row row-cols-1 row-cols-md-2 g-3">
           <div class="col">
-            <h5 class="mb-4"><img src="static/img/LogoWordmark.svg" height="32" alt=""></h5>
-            <p>We believe in the power of nature’s gifts<br>
-              -- raw and unfiltered local honey --<br>
+            <h5 class="mb-4">Quick Links</h5>
+            <ul class="list-unstyled">
+              <li class="mb-2"><a href="products.html" class="footer-link"><p>Our Products</p></a></li>
+              <li class="mb-2"><a href="bees.html" class="footer-link"><p>Education & Events</p></a></li>
+              <li class="mb-2"><a href="shop.html" class="footer-link"><p>Shop Local</p></a></li>
+              <li class="mb-2"><a href="about.html" class="footer-link"><p>About Our Company</p></a></li>
+            </ul>
+          </div>
+          <div class="col">
+            <h5 class="mb-4"><img src="static/img/LogoWordmark.svg" height="48" alt=""></h5>
+            <p>Raw Local Honey & Premium Ingredients<br>
               -- nutritious freeze-dried whole fruits --<br>
               -- fair-trade and single origin spices --</p>
             <div class="social-links">
@@ -294,15 +286,6 @@
             </div>
           </div>
 
-          <div class="col">
-            <h5 class="mb-4">Quick Links</h5>
-            <ul class="list-unstyled">
-              <li class="mb-2"><a href="about.html" class="footer-link"><p>About Our Company</p></a></li>
-              <li class="mb-2"><a href="products.html" class="footer-link"><p>Our Products</p></a></li>
-              <li class="mb-2"><a href="bees.html" class="footer-link"><p>Education & Outreach</p></a></li>
-              <li class="mb-2"><a href="honey.html" class="footer-link"><p>Know Your Honey</p></a></li>
-            </ul>
-          </div>
         </div>
 
         <!-- Copyright -->
