--- a/queensofgoodness/about.html
+++ b/queensofgoodness/about.html
@@ -65,26 +65,16 @@
         <div class="offcanvas-body">
           <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
             <li class="nav-item d-none d-lg-block">
-              <a class="nav-link" href="#">About</a>
-            </li>
-            <li class="nav-item d-none d-lg-block">
               <a class="nav-link" href="products.html">Products</a>
             </li>
             <li class="nav-item d-none d-lg-block">
-              <a class="nav-link" href="bees.html">Bees</a>
+              <a class="nav-link" href="bees.html">Education</a>
             </li>
             <li class="nav-item d-none d-lg-block">
-              <a class="nav-link" href="honey.html">Honey</a>
+              <a class="nav-link" href="shop.html">Shop Local</a>
             </li>
-            <li class="nav-item dropdown d-none d-lg-block">
-              <a class="nav-link dropdown-toggle" href="#" id="buyDropdown" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Shop Local
-              </a>
-              <div class="dropdown-menu" aria-labelledby="buyDropdown">
-                <a class="dropdown-item" href="https://eatwyoming.com/">Eat Wyoming</a>
-                <a class="dropdown-item" href="https://meadowlarklander.org/">Meadowlark Market</a>
-                <a class="dropdown-item" href="https://www.facebook.com/p/Fremont-Local-Market-100084811015487/">Fremont Local Market</a>
-              </div>
+            <li class="nav-item d-none d-lg-block">
+              <a class="nav-link" href="about.html">About</a>
             </li>
             <li class="nav-item d-lg-none">
               <a class="nav-link" href="about.html">
@@ -101,7 +91,7 @@
             <li class="nav-item d-lg-none">
               <a class="nav-link" href="bees.html">
                 <img src="static/img/Bee%20on%20Dandilion.png" class="img-fluid cropped-ofc">
-                <p class="text-center">Education & Outreach</p>
+                <p class="text-center">Education & Events</p>
               </a>
             </li>
             <li class="nav-item d-lg-none">
@@ -119,7 +109,7 @@
   <body>
     <div class="container-xl" id="hero">
       <div class="row g-3">
-        <div class="card tg-card">
+        <div class="card bl-card">
           <div class="card-body">
             <p>Queens of Goodness began with a love for bees, a passion for science, and a dedication to creating products that nourish the body and support the environment. After retiring from a career as a NASA researcher, I turned my focus to beekeeping, where I saw firsthand the incredible impact that healthy bees have on our ecosystems. From that experience, I knew I wanted to create something special—something that not only celebrates the beauty and importance of honeybees but also shares their benefits with others. -- Susan</p>
 
@@ -128,7 +118,7 @@
       </div>
       <div class="row row-cols-2 g-3">
         <div class="col">
-          <div class="card">
+          <div class="card h-100">
             <div class="card-header text-center">Our Honey</div>
             <div class="card-body">
               <img class="card-img-top" src="static/img/SinksHives_hd.jpg">
@@ -137,7 +127,7 @@
           </div>
         </div>
         <div class="col">
-          <div class="card">
+          <div class="card h-100">
             <div class="card-header text-center">Our Mission</div>
             <div class="card-body">
               <img class="card-img-top" src="static/img/AOW.jpeg" alt="Academy of the Winds">
@@ -146,15 +136,77 @@
           </div>
         </div>
       </div>
+      <div class="row row-cols-2 g-3">
+        <div class="col">
+          <div class="card h-100" id="ShopLocal" style="background-color: #f1dfc5;">
+            <div class="card-header text-center">Shop Local</div>
+            <div class="card-body text-center">
+              <a href="https://eatwyoming.com">
+                <img src="static/img/EatWyoLogo-1.png" class="img-fluid" width=50%>
+              </a>
+              <a href="https://meadowlarklander.org">
+                <img src="static/img/MeadowlarkLogo-Final.png" class="img-fluid">
+              </a>
+              <a href="https://www.facebook.com/p/Fremont-Local-Market-100084811015487/">
+                <img src="static/img/FremontLocal.png" class="img-fluid" width=75%>
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card h-100" style="background-color: #f1dfc5;">
+            <div class="card-header text-center">Support Pollinators</div>
+            <div class="card-body">
+              <table>
+                <tr>
+                  <td>
+                    <a href="https://www.xerces.org">
+                      <img src="static/img/XS-2024-web-logo.png" class="img-fluid" width=50%>
+                    </a>
+                  </td>
+                  <td>
+                    <a href="https://www.pollinatorstewardship.org">
+                      <img src="static/img/Pollinator%20Stewardship%20Council.png" class="img-fluid">
+                    </a>
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    <a href="https://www.projectapism.org">
+                      <img src="static/img/PAmlogotype.png" class="img-fluid" width=70%>
+                    </a>
+                  </td>
+                  <td>
+                    <a href="https://www.pollinator.org">
+                      <img src="static/img/PollinatorLogo-Tag2@2x.png" class="img-fluid">
+                    </a>
+                  </td>
+                </tr>
+              </table>
+            </div>
+            <div class="card-footer">1% of profits to support pollinators & outreach<div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div><!--/.container-->
 
     <footer>
       <div class="container text-primary">
-        <div class="row g-3 d-flex align-items-top">
+        <div class="row row-cols-1 row-cols-md-2 g-3">
           <div class="col">
-            <h5 class="mb-4"><img src="static/img/LogoWordmark.svg" height="32" alt=""></h5>
-            <p>We believe in the power of nature’s gifts<br>
-              -- raw and unfiltered local honey --<br>
+            <h5 class="mb-4">Quick Links</h5>
+            <ul class="list-unstyled">
+              <li class="mb-2"><a href="products.html" class="footer-link"><p>Our Products</p></a></li>
+              <li class="mb-2"><a href="bees.html" class="footer-link"><p>Education & Events</p></a></li>
+              <li class="mb-2"><a href="shop.html" class="footer-link"><p>Shop Local</p></a></li>
+              <li class="mb-2"><a href="about.html" class="footer-link"><p>About Our Company</p></a></li>
+            </ul>
+          </div>
+          <div class="col">
+            <h5 class="mb-4"><img src="static/img/LogoWordmark.svg" height="48" alt=""></h5>
+            <p>Raw Local Honey & Premium Ingredients<br>
               -- nutritious freeze-dried whole fruits --<br>
               -- fair-trade and single origin spices --</p>
             <div class="social-links">
@@ -164,15 +216,6 @@
             </div>
           </div>
 
-          <div class="col">
-            <h5 class="mb-4">Quick Links</h5>
-            <ul class="list-unstyled">
-              <li class="mb-2"><a href="about.html" class="footer-link"><p>About Our Company</p></a></li>
-              <li class="mb-2"><a href="products.html" class="footer-link"><p>Our Products</p></a></li>
-              <li class="mb-2"><a href="bees.html" class="footer-link"><p>Education & Outreach</p></a></li>
-              <li class="mb-2"><a href="honey.html" class="footer-link"><p>Know Your Honey</p></a></li>
-            </ul>
-          </div>
         </div>
 
         <!-- Copyright -->
