--- a/queensofgoodness/honey.html
+++ b/queensofgoodness/honey.html
@@ -65,32 +65,13 @@
         <div class="offcanvas-body">
           <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
             <li class="nav-item d-none d-lg-block">
-              <a class="nav-link" href="#">About</a>
-            </li>
-            <li class="nav-item d-none d-lg-block">
               <a class="nav-link" href="products.html">Products</a>
             </li>
             <li class="nav-item d-none d-lg-block">
-              <a class="nav-link" href="bees.html">Bees</a>
+              <a class="nav-link" href="bees.html">Education & Events</a>
             </li>
             <li class="nav-item d-none d-lg-block">
-              <a class="nav-link" href="honey.html">Honey</a>
-            </li>
-            <li class="nav-item dropdown d-none d-lg-block">
-              <a class="nav-link dropdown-toggle" href="products.html#ShopLocal" id="buyDropdown" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Shop Local
-              </a>
-              <div class="dropdown-menu" aria-labelledby="buyDropdown">
-                <a class="dropdown-item" href="https://eatwyoming.com/">Eat Wyoming</a>
-                <a class="dropdown-item" href="https://meadowlarklander.org/">Meadowlark Market</a>
-                <a class="dropdown-item" href="https://www.facebook.com/p/Fremont-Local-Market-100084811015487/">Fremont Local Market</a>
-              </div>
-            </li>
-            <li class="nav-item d-lg-none">
-              <a class="nav-link" href="about.html">
-                <img src="static/img/SinksSmoker.jpg" class="img-fluid cropped-ofc">
-                <p class="text-center">About Our Company</p>
-              </a>
+              <a class="nav-link" href="about.html">About</a>
             </li>
             <li class="nav-item d-lg-none">
               <a class="nav-link" href="products.html">
@@ -101,13 +82,13 @@
             <li class="nav-item d-lg-none">
               <a class="nav-link" href="bees.html">
                 <img src="static/img/Bee%20on%20Dandilion.png" class="img-fluid cropped-ofc">
-                <p class="text-center">Education & Outreach</p>
+                <p class="text-center">Education & Events</p>
               </a>
             </li>
             <li class="nav-item d-lg-none">
-              <a class="nav-link" href="honey.html">
-                <img src="static/img/Jars%20of%20Honey.jpg" class="img-fluid cropped-ofc">
-                <p class="text-center">Know Your Honey</p>
+              <a class="nav-link" href="about.html">
+                <img src="static/img/SinksSmoker.jpg" class="img-fluid cropped-ofc">
+                <p class="text-center">About Our Company</p>
               </a>
             </li>
           </ul>
@@ -119,15 +100,15 @@
   <body>
     <div class="container-xl" id="hero">
       <div class="row g-3">
-        <img src="static/img/1.jpg" class="img-fluid">
+        <img src="static/img/1.jpg" class="img-fluid img-banner">
       </div>
       <div class="row">
-        <h3 class="text-center">Pure Honey as the Bees Make it</h3>
+        <h2 class="text-center">Pure Honey as the Bees Make it</h2>
       </div>
 
       <div class="row g-3">
         <div class="col-sm-6">
-          <div class="card" style="background-color: #d07ee3;">
+          <div class="card tg-card h-100">
             <div class="card-header text-center">Local Raw Honey</div>
             <img class="card-img-top" src="static/img/LocalHive.jpg" alt="Card image">
             <div class="card-body">
@@ -150,7 +131,7 @@
         </div>
 
         <div class="col-sm-6">
-          <div class="card" style="background-color: #a5d14a;">
+          <div class="card lt-card h-100">
             <div class="card-header text-center">Organic Honey</div>
             <img class="card-img-top" src="static/img/OrganicHoney.jpg" alt="Card image">
             <div class="card-body">
@@ -173,7 +154,7 @@
 
       <div class="row g-3">
         <div class="col-sm-6">
-          <div class="card" style="background-color: #8192fe;">
+          <div class="card bl-card h-100">
             <div class="card-header text-center">Imported Honey</div>
             <img class="card-img-top" src="static/img/world%20map.png" alt="Card image">
             <div class="card-body">
@@ -192,7 +173,7 @@
           </div>
         </div>
         <div class="col-sm-6">
-          <div class="card" style="background-color: #e6a322;">
+          <div class="card tg-card h-100">
             <div class="card-header text-center">Crystallized Honey</div>
             <img class="card-img-top" src="static/img/Cristallizzazione_del_miele_IMG_0373.jpg" alt="Card image">
             <div class="card-body">
@@ -221,11 +202,19 @@
 
     <footer>
       <div class="container text-primary">
-        <div class="row g-3 d-flex align-items-top">
+        <div class="row row-cols-1 row-cols-md-2 g-3">
           <div class="col">
-            <h5 class="mb-4"><img src="static/img/LogoWordmark.svg" height="32" alt=""></h5>
-            <p>We believe in the power of nature’s gifts<br>
-              -- raw and unfiltered local honey --<br>
+            <h5 class="mb-4">Quick Links</h5>
+            <ul class="list-unstyled">
+              <li class="mb-2"><a href="products.html" class="footer-link"><p>Our Products</p></a></li>
+              <li class="mb-2"><a href="bees.html" class="footer-link"><p>Education & Events</p></a></li>
+              <li class="mb-2"><a href="shop.html" class="footer-link"><p>Shop Local</p></a></li>
+              <li class="mb-2"><a href="about.html" class="footer-link"><p>About Our Company</p></a></li>
+            </ul>
+          </div>
+          <div class="col">
+            <h5 class="mb-4"><img src="static/img/LogoWordmark.svg" height="48" alt=""></h5>
+            <p>Raw Local Honey & Premium Ingredients<br>
               -- nutritious freeze-dried whole fruits --<br>
               -- fair-trade and single origin spices --</p>
             <div class="social-links">
@@ -235,15 +224,6 @@
             </div>
           </div>
 
-          <div class="col">
-            <h5 class="mb-4">Quick Links</h5>
-            <ul class="list-unstyled">
-              <li class="mb-2"><a href="about.html" class="footer-link"><p>About Our Company</p></a></li>
-              <li class="mb-2"><a href="products.html" class="footer-link"><p>Our Products</p></a></li>
-              <li class="mb-2"><a href="bees.html" class="footer-link"><p>Education & Outreach</p></a></li>
-              <li class="mb-2"><a href="honey.html" class="footer-link"><p>Know Your Honey</p></a></li>
-            </ul>
-          </div>
         </div>
 
         <!-- Copyright -->
@@ -253,6 +233,7 @@
             <p class="mb-0">&copy; 2024-2025 Queens of Goodness, LLC. All rights reserved.</p>
           </div>
         </div>
+      </div>
       </div>
     </footer>
   </body>
