--- a/queensofgoodness/products.html
+++ b/queensofgoodness/products.html
@@ -65,32 +65,16 @@
         <div class="offcanvas-body">
           <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
             <li class="nav-item d-none d-lg-block">
-              <a class="nav-link" href="about.html">About</a>
-            </li>
-            <li class="nav-item d-none d-lg-block">
               <a class="nav-link" href="products.html">Products</a>
             </li>
             <li class="nav-item d-none d-lg-block">
-              <a class="nav-link" href="bees.html">Bees</a>
+              <a class="nav-link" href="bees.html">Education</a>
             </li>
             <li class="nav-item d-none d-lg-block">
-              <a class="nav-link" href="honey.html">Honey</a>
+              <a class="nav-link" href="shop.html">Shop Local</a>
             </li>
-            <li class="nav-item dropdown d-none d-lg-block">
-              <a class="nav-link dropdown-toggle" href="products.html#ShopLocal" id="buyDropdown" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Shop Local
-              </a>
-              <div class="dropdown-menu" aria-labelledby="buyDropdown">
-                <a class="dropdown-item" href="https://eatwyoming.com/">Eat Wyoming</a>
-                <a class="dropdown-item" href="https://meadowlarklander.org/">Meadowlark Market</a>
-                <a class="dropdown-item" href="https://www.facebook.com/p/Fremont-Local-Market-100084811015487/">Fremont Local Market</a>
-              </div>
-            </li>
-            <li class="nav-item d-lg-none">
-              <a class="nav-link" href="about.html">
-                <img src="static/img/SinksSmoker.jpg" class="img-fluid cropped-ofc">
-                <p class="text-center">About Our Company</p>
-              </a>
+            <li class="nav-item d-none d-lg-block">
+              <a class="nav-link" href="about.html">About</a>
             </li>
             <li class="nav-item d-lg-none">
               <a class="nav-link" href="products.html">
@@ -101,13 +85,13 @@
             <li class="nav-item d-lg-none">
               <a class="nav-link" href="bees.html">
                 <img src="static/img/Bee%20on%20Dandilion.png" class="img-fluid cropped-ofc">
-                <p class="text-center">Education & Outreach</p>
+                <p class="text-center">Education & Events</p>
               </a>
             </li>
             <li class="nav-item d-lg-none">
-              <a class="nav-link" href="honey.html">
-                <img src="static/img/Jars%20of%20Honey.jpg" class="img-fluid cropped-ofc">
-                <p class="text-center">Know Your Honey</p>
+              <a class="nav-link" href="about.html">
+                <img src="static/img/SinksSmoker.jpg" class="img-fluid cropped-ofc">
+                <p class="text-center">About Our Company</p>
               </a>
             </li>
           </ul>
@@ -118,43 +102,65 @@
 
   <body>
     <div class="container-xl" id="hero"">
+      <div class="row row-cols-1 row-cols-md-2 g-3">
+        <div class="col">
+          <div class="card h-100" style="background-color: #e6a322;">
+            <img class="card-img-top" src="static/img/Display.jpg" alt="Product display">
+          </div>
+        </div>
+        <div class="col">
+          <div class="card bl-card h-100">
+            <div class="card-header text-center">Premium Creamed Raw Honey</div>
+            <div class="card-body">
+              <ul class="card-text">
+                <li>Unfiltered and never heated</li>
+                <li>Everything from the bee's honey</li>
+                <li>Nutritious freeze-dried whole fruits</li>
+                <li>Fair trade and single origin spices</li>
+                <li>Creamed to be silky and spreadable</li>
+                <li>Hand crafted, small batch</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
       <div class="row">
-        <h4 class="bolder text-center">Premium Creamed Raw Honey<br> Hand-crafted to nourish both body and spirit</h4>
+        <h2 class="bolder text-center">Premium Creamed Raw Honey<br> Hand-crafted to nourish both body and spirit</h2>
       </div>
 
       <div class="row row-cols-2 row-cols-md-3 row-cols-xl-6 g-3">
         <div class="col">
-          <div class="card" style="background-color: #e6a322;">
+          <div class="card h-100" style="background-color: #e6a322;">
             <div class="card-header text-center">Turmeric Ginger</div>
             <img class="card-img-top" src="static/img/TG.jpg" alt="Golden Milk">
           </div>
         </div>
         <div class="col">
-          <div class="card" style="background-color: #d07ee3;">
+          <div class="card h-100" style="background-color: #d07ee3;">
             <div class="card-header text-center">Elderberry</div>
             <img class="card-img-top" src="static/img/E.jpg" alt="Elderberry">
           </div>
         </div>
         <div class="col">
-          <div class="card" style="background-color: #a5d14a;">
+          <div class="card h-100" style="background-color: #a5d14a;">
             <div class="card-header text-center">Ginger</div>
             <img class="card-img-top" src="static/img/G.jpg" alt="Ginger">
           </div>
         </div>
         <div class="col">
-          <div class="card" style="background-color: #ff761e;">
+          <div class="card h-100" style="background-color: #ff761e;">
             <div class="card-header text-center">Pumpkin Spice</div>
             <img class="card-img-top" src="static/img/PS.jpg" alt="Pumpkin Spice">
           </div>
         </div>
         <div class="col">
-          <div class="card" style="background-color: #8192fe;">
+          <div class="card h-100" style="background-color: #8192fe;">
             <div class="card-header text-center">Blueberry Lemon</div>
             <img class="card-img-top" src="static/img/BL.jpg" alt="Blueberry Lemon">
           </div>
         </div>
         <div class="col">
-          <div class="card" style="background-color: #ffda52;">
+          <div class="card h-100" style="background-color: #ffda52;">
             <div class="card-header text-center">Lemon</div>
             <img class="card-img-top" src="static/img/L.jpg" alt="Lemon">
           </div>
@@ -169,7 +175,7 @@
 
       <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-3">
         <div class="col" id="TG">
-          <div class="card" style="background-color: #e6a322;">
+          <div class="card h-100" style="background-color: #e6a322;">
             <div class="card-header text-center">Turmeric Ginger</div>
             <img class="card-img-top" src="static/img/Golden%20Milk.jpg" alt="Golden Milk">
             <div class="card-body">
@@ -187,7 +193,7 @@
           </div>
         </div>
         <div class="col" id="E">
-          <div class="card" style="background-color: #d07ee3;">
+          <div class="card h-100" style="background-color: #d07ee3;">
             <div class="card-header text-center">Elderberry</div>
             <img class="card-img-top" src="static/img/2.jpg" alt="Elderberry">
             <div class="card-body">
@@ -205,7 +211,7 @@
           </div>
         </div>
         <div class="col" id="G">
-          <div class="card" style="background-color: #a5d14a;">
+          <div class="card h-100" style="background-color: #a5d14a;">
             <div class="card-header text-center">Ginger</div>
             <img class="card-img-top" src="static/img/4.jpg" alt="Ginger">
             <div class="card-body">
@@ -223,7 +229,7 @@
           </div>
         </div>
         <div class="col" id="PS">
-          <div class="card" style="background-color: #ff761e;">
+          <div class="card h-100" style="background-color: #ff761e;">
             <div class="card-header text-center">Pumpkin Spice</div>
             <img class="card-img-top" src="static/img/Toast.jpeg" alt="Pumpkin Spice">
             <div class="card-body">
@@ -241,7 +247,7 @@
           </div>
         </div>
         <div class="col" id="BL">
-          <div class="card" style="background-color: #8192fe;">
+          <div class="card h-100" style="background-color: #8192fe;">
             <div class="card-header text-center">Blueberry Lemon</div>
             <img class="card-img-top" src="static/img/BlueberryTea.jpeg" alt="Blueberry Lemon">
             <div class="card-body">
@@ -259,7 +265,7 @@
           </div>
         </div>
         <div class="col" id="L">
-          <div class="card" style="background-color: #ffda52;">
+          <div class="card h-100" style="background-color: #ffda52;">
             <div class="card-header text-center">Lemon</div>
             <img class="card-img-top" src="static/img/3.jpg" alt="Lemon">
             <div class="card-body">
@@ -277,85 +283,23 @@
           </div>
         </div>
       </div>
-      <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-3">
-        <div class="col">
-          <div class="card" style="background-color: #e6a322;">
-            <div class="card-header text-center">Premium Creamed Raw Honey</div>
-            <img class="card-img-top" src="static/img/Product%20stack.jpg" alt="img-fluid">
-            <div class="card-body">
-              <h5 class="card-title text-center">Local Raw Honey</h5>
-              <ul class="card-text">
-                <li>Unfiltered and never heated</li>
-                <li>Everything from the bee's honey</li>
-                <li>Creamed to be silky and spreadable</li>
-                <li>Nutritious freeze-dried whole fruits</li>
-                <li>Fair trade and single origin spices</li>
-              </ul>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card" id="ShopLocal" style="background-color: #f1dfc5;">
-            <div class="card-header text-center">Shop Local</div>
-            <div class="card-body text-center">
-              <a href="https://eatwyoming.com">
-                <img src="static/img/EatWyoLogo-1.png" class="img-fluid" width=50%>
-              </a>
-              <a href="https://meadowlarklander.org">
-                <img src="static/img/MeadowlarkLogo-Final.png" class="img-fluid">
-              </a>
-              <a href="https://www.facebook.com/p/Fremont-Local-Market-100084811015487/">
-                <img src="static/img/FremontLocal.png" class="img-fluid" width=75%>
-              </a>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card" style="background-color: #f1dfc5;">
-            <div class="card-header text-center">Support Pollinators</div>
-            <div class="card-body">
-              <table>
-                <tr>
-                  <td>
-                    <a href="https://www.xerces.org">
-                      <img src="static/img/XS-2024-web-logo.png" class="img-fluid" width=50%>
-                    </a>
-                  </td>
-                  <td>
-                    <a href="https://www.pollinatorstewardship.org">
-                      <img src="static/img/Pollinator%20Stewardship%20Council.png" class="img-fluid">
-                    </a>
-                  </td>
-                </tr>
-                <tr>
-                  <td>
-                    <a href="https://www.projectapism.org">
-                      <img src="static/img/PAmlogotype.png" class="img-fluid" width=70%>
-                    </a>
-                  </td>
-                  <td>
-                    <a href="https://www.pollinator.org">
-                      <img src="static/img/PollinatorLogo-Tag2@2x.png" class="img-fluid">
-                    </a>
-                  </td>
-                </tr>
-              </table>
-            </div>
-            <div class="card-footer">1% of profits to support pollinators & outreach<div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
     </div><!--/.container-->
 
     <footer>
       <div class="container text-primary">
-        <div class="row g-3 d-flex align-items-top">
+        <div class="row row-cols-1 row-cols-md-2 g-3">
           <div class="col">
-            <h5 class="mb-4"><img src="static/img/LogoWordmark.svg" height="32" alt=""></h5>
-            <p>We believe in the power of nature’s gifts<br>
-              -- raw and unfiltered local honey --<br>
+            <h5 class="mb-4">Quick Links</h5>
+            <ul class="list-unstyled">
+              <li class="mb-2"><a href="products.html" class="footer-link"><p>Our Products</p></a></li>
+              <li class="mb-2"><a href="bees.html" class="footer-link"><p>Education & Events</p></a></li>
+              <li class="mb-2"><a href="shop.html" class="footer-link"><p>Shop Local</p></a></li>
+              <li class="mb-2"><a href="about.html" class="footer-link"><p>About Our Company</p></a></li>
+            </ul>
+          </div>
+          <div class="col">
+            <h5 class="mb-4"><img src="static/img/LogoWordmark.svg" height="48" alt=""></h5>
+            <p>Raw Local Honey & Premium Ingredients<br>
               -- nutritious freeze-dried whole fruits --<br>
               -- fair-trade and single origin spices --</p>
             <div class="social-links">
@@ -365,33 +309,24 @@
             </div>
           </div>
 
-          <div class="col">
-            <h5 class="mb-4">Quick Links</h5>
-            <ul class="list-unstyled">
-              <li class="mb-2"><a href="about.html" class="footer-link"><p>About Our Company</p></a></li>
-              <li class="mb-2"><a href="products.html" class="footer-link"><p>Our Products</p></a></li>
-              <li class="mb-2"><a href="bees.html" class="footer-link"><p>Education & Outreach</p></a></li>
-              <li class="mb-2"><a href="honey.html" class="footer-link"><p>Know Your Honey</p></a></li>
-            </ul>
-          </div>
         </div>
 
         <!-- Copyright -->
         <div class="row mt-5>
-        <div class="col-12">
+          <div class="col-12">
           <div class="text-center">
             <p class="mb-0">&copy; 2024-2025 Queens of Goodness, LLC. All rights reserved.</p>
           </div>
         </div>
       </div>
-    </div>
+      </div>
     </footer>
+
+    <!-- scripts -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
+    <script src="https://use.fontawesome.com/3142141c42.js"></script>
+    <script src="static/js/main.js" type="text/javascript"></script>
   </body>
-
-  <!-- scripts -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-
-  <script src="https://use.fontawesome.com/3142141c42.js"></script>
-  <script src="static/js/main.js" type="text/javascript"></script>
 </html>
 
